--- a/LearningProgramming/res/layout/activity_first.xml
+++ b/LearningProgramming/res/layout/activity_first.xml
@@ -1,14 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/button_start"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
-</LinearLayout>
+        <SurfaceView
+          android:id="@+id/SurfaceViewMain"
+          android:layout_width="fill_parent"
+          android:layout_height="420px">
+        </SurfaceView>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_marginBottom="136dp"
+            android:layout_marginLeft="47dp"
+            android:onClick="move"
+            android:text="@string/button_start" />
+
+        <Button
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/button1"
+            android:layout_alignBottom="@+id/button1"
+            android:layout_marginLeft="22dp"
+            android:layout_toRightOf="@+id/button1"
+            android:onClick="reset"
+            android:text="@string/button_reset" />
+
+</RelativeLayout>
