--- a/LearningProgramming/res/layout/activity_main.xml
+++ b/LearningProgramming/res/layout/activity_main.xml
@@ -2,12 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main"
     android:gravity="top" >
-
-    <com.example.learningprogramming.StartView
-        android:id="@+id/startview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/button1"
