--- a/LearningProgramming/res/layout/activity_first.xml
+++ b/LearningProgramming/res/layout/activity_first.xml
@@ -31,7 +31,8 @@
             android:layout_toRightOf="@+id/button1"
             android:onClick="reset"
             android:text="@string/button_reset" />
-
+
+
         <ScrollView
             android:id="@+id/scrollView1"
             android:layout_width="wrap_content"
@@ -40,25 +41,37 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/button2" >
-
+
+
                  <TableLayout
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent" >
 
                     <TableRow
                         android:id="@+id/tableRow1"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content" >
+
+                    <View 
+                        android:id="@+id/horz_center1"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />    
                     <Spinner
                     	android:id="@+id/Condition1"
-                    	android:layout_width="fill_parent"
+                    	android:layout_width="wrap_content"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitCondition" />
                     <Spinner
                     	android:id="@+id/Action1"
-                    	android:layout_width="fill_parent"
+                    	android:layout_width="wrap_content"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>
@@ -68,6 +81,12 @@
                         android:id="@+id/tableRow2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
+                    
+                    <View 
+                        android:id="@+id/horz_center2"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />   
                     <Spinner
                     	android:id="@+id/Condition2"
                     	android:layout_width="fill_parent"
@@ -78,6 +97,11 @@
                     	android:layout_width="fill_parent"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>                    
@@ -87,6 +111,11 @@
                         android:id="@+id/tableRow3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
+                    <View 
+                        android:id="@+id/horz_center3"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />   
                     <Spinner
                     	android:id="@+id/Condition3"
                     	android:layout_width="fill_parent"
@@ -97,6 +126,11 @@
                     	android:layout_width="fill_parent"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>               
@@ -107,6 +141,12 @@
                         android:id="@+id/tableRow4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
+                    <View 
+                        android:id="@+id/horz_center4"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />   
+                        
                     <Spinner
                     	android:id="@+id/Condition4"
                     	android:layout_width="fill_parent"
@@ -117,6 +157,11 @@
                     	android:layout_width="fill_parent"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox4"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>
@@ -126,6 +171,12 @@
                         android:id="@+id/tableRow5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
+                    <View 
+                        android:id="@+id/horz_center5"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />   
+                        
                     <Spinner
                     	android:id="@+id/Condition5"
                     	android:layout_width="fill_parent"
@@ -136,6 +187,11 @@
                     	android:layout_width="fill_parent"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox5"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>
@@ -145,6 +201,12 @@
                         android:id="@+id/tableRow6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" >
+                    <View 
+                        android:id="@+id/horz_center6"
+                        android:layout_width="0dip"
+                        android:layout_height="0dip"
+                        />   
+                        
                     <Spinner
                     	android:id="@+id/Condition6"
                     	android:layout_width="fill_parent"
@@ -155,6 +217,11 @@
                     	android:layout_width="fill_parent"
                     	android:layout_height="wrap_content"
                     	android:entries="@array/GunbitAction" />
+                    <CheckBox 
+                        android:id="@+id/Checkbox6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/straitcheck"/>
 
                         
                     </TableRow>
@@ -163,7 +230,9 @@
                     
                     
                 </TableLayout>
-
+
+
+
                     
             
             </ScrollView>
